[package]
name = "ft-lockup"
version = "0.2.0"
authors = ["Eugene The Dream <ek@proximity.dev>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"
near-contract-standards = "3.1.0"
uint = { version = "0.9.0", default-features = false }

[dev-dependencies]
near-sdk-sim = "3.2.0"

[profile.release]
codegen-units=1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
